cmake_minimum_required(VERSION 2.6)
PROJECT(delserver)

AUX_SOURCE_DIRECTORY(./ SRC_LIST)


SET(EXECUTABLE_OUTPUT_PATH  ./)

ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11)

INCLUDE_DIRECTORIES(./ ../base ../db_proxy_server/ /usr/local/mysql/include )
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/./   ${CMAKE_CURRENT_SOURCE_DIR}/../base ${CMAKE_CURRENT_SOURCE_DIR}/../base/slog/lib  /usr/local/mysql/lib)

#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
#ADD_LIBRARY(${PROJECTNAME} SHARED/STATIC ${SRC_LIST})
ADD_EXECUTABLE(del_file ${SRC_LIST})

TARGET_LINK_LIBRARIES(del_file base  slog  mysqlclient_r pthread) 

